// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`cached template integration tests first clone with variable replacement should snapshot created directory structure 1`] = `
[
  "LICENSE",
  "README.md",
  "__tests__/",
  "__tests__/basic.test.ts",
  "jest.config.js",
  "package.json",
]
`;

exports[`cached template integration tests first clone with variable replacement should snapshot package.json files if they exist 1`] = `
{
  "package.json": {
    "author": "Test User test <tester-test@example.com>",
    "bugs": {
      "url": "https://github.com/Test User test/Test User test/issues",
    },
    "description": "Test Module test",
    "devDependencies": {
      "pgsql-test": "^2.13.2",
    },
    "homepage": "https://github.com/Test User test/Test User test",
    "keywords": [],
    "license": "MIT",
    "name": "integration-test",
    "pnpm": {
      "overrides": {
        "graphql": "14.7.0",
      },
    },
    "publishConfig": {
      "access": "public",
      "directory": "dist",
    },
    "repository": {
      "type": "git",
      "url": "https://github.com/Test User test/Test User test",
    },
    "scripts": {
      "lint": "eslint . --fix",
      "test": "jest",
      "test:watch": "jest --watch",
    },
    "version": "0.0.1",
  },
}
`;

exports[`cached template integration tests second clone from cache should snapshot created directory structure from cache 1`] = `
[
  "LICENSE",
  "README.md",
  "__tests__/",
  "__tests__/basic.test.ts",
  "jest.config.js",
  "package.json",
]
`;

exports[`cached template integration tests second clone from cache should snapshot package.json files from cached template 1`] = `
{
  "package.json": {
    "author": "Test User cached <tester-cached@example.com>",
    "bugs": {
      "url": "https://github.com/Test User cached/Test User cached/issues",
    },
    "description": "Test Module cached",
    "devDependencies": {
      "pgsql-test": "^2.13.2",
    },
    "homepage": "https://github.com/Test User cached/Test User cached",
    "keywords": [],
    "license": "MIT",
    "name": "integration-cached",
    "pnpm": {
      "overrides": {
        "graphql": "14.7.0",
      },
    },
    "publishConfig": {
      "access": "public",
      "directory": "dist",
    },
    "repository": {
      "type": "git",
      "url": "https://github.com/Test User cached/Test User cached",
    },
    "scripts": {
      "lint": "eslint . --fix",
      "test": "jest",
      "test:watch": "jest --watch",
    },
    "version": "0.0.1",
  },
}
`;
